<resources>
    <string name="app_name">Android_Project</string>
    <string name="layout1_title">CHOOSE FOOD TYPE</string>
    <string name="f1">한식</string>
    <string name="f2">분식</string>
    <string name="f3">돈가스, 회, 일식</string>
    <string name="f4">중식</string>
    <string name="f5">양식</string>
    <string name="f6">기타</string>
    <string name="f7">치킨</string>
    <string name="f8">카페, 디저트</string>
    <string name="f9">버거, 토스트</string>
    <string name="f10">도시락</string>
    <string name="f11">퓨전음식</string>
    <string name="f12">피자</string>
</resources>