<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:background="#effea4"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7FF71">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="고시촌먹거리"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textColor="#8C8C8C"
            android:padding="15dp"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/account"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:backgroundTint="#E7FF71"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/typo_ssangmundongb"
        android:textSize="20dp"
        android:textColor="#5F5F5E"
        android:text="@string/layout1_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/korean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f1"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/snack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f2"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/japanese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f3"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/western"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f4"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f5"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f6"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/chicken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f7"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/pizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f12"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/dessert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f8"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/fastfood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f9"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/lunchbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f10"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/fusion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f11"
            android:fontFamily="@font/typo_ssangmundongb"
            android:textSize="25dp"
            android:backgroundTint="#B5EA77"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>